# nes-emulator

./: .gitignore  .gitmodules  LICENSE  README.md  go.mod  go.sum  main.go  meson.build  nes-emulator  nob.c
.github/workflows/: c-cpp.yml  main.yml
assets/meson-logs/: meson-log.txt
bus/: bus.go
cpu/: cpu.go  cpu_test.go
emulador/: core.go  emulador.go
include/: Config.h  global.h
interface/: interface.go  ppu.go  ui.go
interface/display/: constants.go  font.go  text.go
interface/game/: loader.go  state.go
interface/menu/: game_menu.go  input.go  renderer.go
memory/: mapper_mmc1.go  mapper_mmc3.go  mapper_nrom.go  mapper_uxrom.go  mappers.go  memory.go
ppu/: dma.go  palette.go  ppu.go  ppu_test_sdl2.go  registers.go  render.go  state.go
rom/: loader.go
roms/: Super_Mario_Bros_2.nes
src/: Main.cpp
src/Header files/: APU.h  Bus.h  CPU.h  Cartridge.h  PPU.h
src/Header_files/: APU.h  Bus.h  CPU.h  Cartridge.h  Emulator.h  Instructions.h  PPU.h  UI.h
src/Mappers/: Mapper.cpp  Mapper.h  Mapper000.cpp  Mapper000.h  Mapper001.cpp  Mapper001.h  Mapper002.cpp  Mapper002.h  Mapper003.cpp  Mapper003.h  Mapper004.cpp  Mapper004.h  Mapper005.cpp  Mapper005.h  Mapper007.cpp  Mapper007.h  Mapper066.cpp  Mapper066.h  Memory.cpp  Memory.h
src/Source files/: Emulator.cpp
src/Source_files/: APU.cpp  Bus.cpp  CPU.cpp  Cartridge.cpp  Emulator.cpp  PPU.cpp  UI.cpp
src/core/: Emulator.h  Main.cpp
src/cpu/: Cpu.cpp  Cpu.h  Memory.cpp  Memory.h
src/rom/: Mapper.h  RomLoader.h
subprojects/: tinyfiledialogs.wrap
tests/: CPUTest.cpp  TestMemory.cpp
tests/rere/: TestMemory.list  TestMemory.list.bi
